2008-12-11  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (applet_pre_keyring_callback): handle right-click menu too

2008-12-09  Dan Williams  <dcbw@redhat.com>

	* configure.ac
		- Update tarball name to match project name

2008-12-09  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wifi.c
		- (other_wireless_activate_cb, new_network_activate_cb,
		   wireless_get_more_info, wireless_get_secrets): really fix focus
			stealing prevention; the window needs to be visible before trying
			to present it with an updated time, otherwise GTK just calls
			gtk_window_show() instead of setting the timestamp

2008-12-09  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (applet_pre_keyring_callback): ensure that the menu is actually
			destroyed before letting the keyring calls happen

2008-12-09  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/ip4-routes-dialog.c
		- (ip4_routes_dialog_new, ip4_routes_dialog_update_setting): get and
			set never-default accordingly

	* src/connection-editor/ce-page-ip4.glade
		- Add never-default checkbox to the IP4 routes dialog

2008-12-09  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/main.c
		- (impl_start): bring connection editor window to front when it's
			launched again, if it's already started

	* src/connection-editor/nm-connection-list.c
	  src/connection-editor/nm-connection-list.h
		- (nm_connection_list_present): no longer static

2008-12-05  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-helpers.h
		- (nm_gconf_clear_private_connection_values): new function to clear
			applet private values from a connection

	* src/connection-editor/page-wired-security.c
		- (ce_page_wired_security_new): ensure setting gets updated when
			security is changed
		- (validate): copy applet private values to the real connection when
			using 802.1x security; clear applet private values when there's no
			security
