@@ -187,24 +187,25 @@ nm_network_menu_item_get_hash (NMNetworkMenuItem * item,
 void
 nm_network_menu_item_set_detail (NMNetworkMenuItem * item,
                                  NMAccessPoint * ap,
-                                 GdkPixbuf * adhoc_icon)
+                                 GdkPixbuf * adhoc_icon,
+                                 guint32 dev_caps)
 {
-	gboolean encrypted = FALSE, adhoc = FALSE;
-	guint32 flags, wpa_flags, rsn_flags;
+	gboolean encrypted = FALSE, is_adhoc = FALSE;
+	guint32 ap_flags, ap_wpa, ap_rsn;
 
-	flags = nm_access_point_get_flags (ap);
-	wpa_flags = nm_access_point_get_wpa_flags (ap);
-	rsn_flags = nm_access_point_get_rsn_flags (ap);
+	ap_flags = nm_access_point_get_flags (ap);
+	ap_wpa = nm_access_point_get_wpa_flags (ap);
+	ap_rsn = nm_access_point_get_rsn_flags (ap);
 
-	if (   (flags & NM_802_11_AP_FLAGS_PRIVACY)
-	    || (wpa_flags != NM_802_11_AP_SEC_NONE)
-	    || (rsn_flags != NM_802_11_AP_SEC_NONE))
+	if (   (ap_flags & NM_802_11_AP_FLAGS_PRIVACY)
+	    || (ap_wpa != NM_802_11_AP_SEC_NONE)
+	    || (ap_rsn != NM_802_11_AP_SEC_NONE))
 		encrypted = TRUE;
 
 	if (nm_access_point_get_mode (ap) == NM_802_11_MODE_ADHOC)
-		adhoc = TRUE;
+		is_adhoc = TRUE;
 
-	if (adhoc) {
+	if (is_adhoc) {
 		gtk_image_set_from_pixbuf (GTK_IMAGE (item->detail), adhoc_icon);
 	} else if (encrypted) {
 		if (gtk_icon_theme_has_icon (gtk_icon_theme_get_default (), "network-wireless-encrypted"))
@@ -213,6 +214,18 @@ nm_network_menu_item_set_detail (NMNetworkMenuItem * item,
 			gtk_image_set_from_icon_name (GTK_IMAGE (item->detail), "gnome-lockscreen", GTK_ICON_SIZE_MENU);
 	} else {
 		gtk_image_set_from_stock (GTK_IMAGE (item->detail), NULL, GTK_ICON_SIZE_MENU);
+	}
+
+	/* Don't enable the menu item the device can't even connect to the AP */
+	if (   !nm_utils_security_valid (NMU_SEC_NONE, dev_caps, TRUE, is_adhoc, ap_flags, ap_wpa, ap_rsn)
+        && !nm_utils_security_valid (NMU_SEC_STATIC_WEP, dev_caps, TRUE, is_adhoc, ap_flags, ap_wpa, ap_rsn)
+	    && !nm_utils_security_valid (NMU_SEC_LEAP, dev_caps, TRUE, is_adhoc, ap_flags, ap_wpa, ap_rsn)
+	    && !nm_utils_security_valid (NMU_SEC_DYNAMIC_WEP, dev_caps, TRUE, is_adhoc, ap_flags, ap_wpa, ap_rsn)
+	    && !nm_utils_security_valid (NMU_SEC_WPA_PSK, dev_caps, TRUE, is_adhoc, ap_flags, ap_wpa, ap_rsn)
+	    && !nm_utils_security_valid (NMU_SEC_WPA2_PSK, dev_caps, TRUE, is_adhoc, ap_flags, ap_wpa, ap_rsn)
+	    && !nm_utils_security_valid (NMU_SEC_WPA_ENTERPRISE, dev_caps, TRUE, is_adhoc, ap_flags, ap_wpa, ap_rsn)
+	    && !nm_utils_security_valid (NMU_SEC_WPA2_ENTERPRISE, dev_caps, TRUE, is_adhoc, ap_flags, ap_wpa, ap_rsn)) {
+		gtk_widget_set_sensitive (GTK_WIDGET (item), FALSE);
 	}
 }
 
